--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>moja stranica</title>
+		<title>emina stranica</title>
 	</head>
 
 	<body>
@@ -10,3 +10,4 @@
 	</body>
 
 </html>
+
