--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
 
 	<body>
 		<p>
-		helo
+		<strong>
+			helo guys
+		</strong>
+			danas učimo hj :( ili igramo <i> <b> mc</b></i>?
 		</p>
 	</body>
 
 </html>
+
 
