--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
 
 	<body>
 		<p>
-		<strong>
-			helo guys
-		</strong>
-			danas učimo hj :( ili igramo <i> <b> mc</b></i>?
+		fale mi <b>moohamed</b> i <i>ocktavian</i>
 		</p>
 	</body>
 
 </html>
+
 
 
