--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
 	<body>
 		<h2><3</h2>
 		<p>
-		fale mi <b>moohamed</b> i <i>ocktavian</i>
+			imam trening danas :(
+			<br>ali ću svejedno igrati <b>mc<3</b>
 		</p>
 		<p>
-			<h15>ovo je moja tajna</h15>
+			<h6>ovo je moja tajna</h6>
 		</p>
 	</body>
 
 </html>
+
 
 
 
