--- a/index.html
+++ b/index.html
@@ -15,9 +15,14 @@
 		<p>
 			<h1><b>:D</b></h1>
 		</p>
+		<p>
+			sada iznad glavnog poveznika stavimo zvijezdicu
+			<br>...to zapravo nije znak nego samo moj <h3><b>čmrka</b></h3>
+		</p>
 	</body>
 
 </html>
+
 
 
 
