--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
 		</p>
 		<p>
 			sada iznad glavnog poveznika stavimo zvijezdicu
-			<br>...to zapravo nije znak nego samo moj <h3><b>čmrka</b></h3>
+			<br>...to zapravo nije znak nego samo moj <h3><b><i>čmrka</i></b></h3>
 		</p>
 	</body>
 
 </html>
+
 
 
 
