--- a/index.html
+++ b/index.html
@@ -19,9 +19,13 @@
 			sada iznad glavnog poveznika stavimo zvijezdicu
 			<br>...to zapravo nije znak nego samo moj <h3><b><i>čmrka</i></b></h3>
 		</p>
+		<pre>
+			<b>ordom     ejdom     ensarjero!</b>
+		</pre>
 	</body>
 
 </html>
+
 
 
 
