--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		</p>
 		<p>
 			sada iznad glavnog poveznika stavimo zvijezdicu
-			<br>...to zapravo nije znak nego samo moj &nbsp, &nbsp <h3><b><i>čmrka</i></b></h3>
+			<br>...to zapravo nije znak nego samo moj &nbsp; &nbsp <h3><b><i>čmrka</i></b></h3>
 		</p>
 		<pre>
 			<b>ordom     ejdom     ensarjero!</b>
@@ -20,6 +20,7 @@
 	</body>
 
 </html>
+
 
 
 
