--- a/index.html
+++ b/index.html
@@ -12,14 +12,21 @@
 		</p>
 		<p>
 			sada iznad glavnog poveznika stavimo zvijezdicu
-			<br>...to zapravo nije znak nego samo moj &nbsp; &nbsp <h3><b><i>čmrka</i></b></h3>
+			<br>...to zapravo nije znak nego samo &nbsp; &nbsp moj  <h3><b><i>čmrka</i></b></h3>
 		</p>
 		<pre>
 			<b>ordom     ejdom     ensarjero!</b>
 		</pre>
+		<ol>
+			<li>flovrida</li>
+			<li>escenarii</li>
+			<li>globskver</li>
+			<li>čmrka/čmrlja</li>
+		</ol>
 	</body>
 
 </html>
+
 
 
 
