--- a/index.html
+++ b/index.html
@@ -23,9 +23,15 @@
 			<li>globskver</li>
 			<li>čmrka/čmrlja</li>
 		</ol>
+		<ol>
+			<li>kralj u žutom</li>
+			<li>1984.</li>
+			<li>hamlet</li>
+		</ol>
 	</body>
 
 </html>
+
 
 
 
