--- a/index.html
+++ b/index.html
@@ -28,9 +28,16 @@
 			<li>1984.</li>
 			<li>hamlet</li>
 		</ul>
+		<ul style="list-style-type:square;">
+			<li>gertrud</li>
+			<li>terver</li>
+			<li>ocktavijan</li>
+			<li>moohamed</li>
+		</ul>
 	</body>
 
 </html>
+
 
 
 
