--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<p>
 			<h6>ovo je moja tajna</h6>
 		</p>
+		<img src="standardboard.png">
 		<p>
 			<h1><b>:D</b></h1>
 		</p>
@@ -46,3 +47,4 @@
 	</body>
 
 </html>
+
