--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<p>
 			<h6>ovo je moja tajna</h6>
 		</p>
-		<img src="standardboard.png">
+		<img src="standardboard.jpg">
 		<p>
 			<h1><b>:D</b></h1>
 		</p>
@@ -42,5 +42,6 @@
 	</body>
 
 </html>
+
 
 
