--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
 				<dd>dkxre</dd>
 				<dd>dilerna</dd>
 		</dl>
+		<a herf="https://gimnazija-cakovec.hr/">školica</a>
 	</body>
 
 </html>
+
 
 
 
