--- a/index (1).html
+++ b/index (1).html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>emina stranica</title>
+		<title>o emi</title>
 	</head>
 
 	<body>
@@ -43,6 +43,7 @@
 	</body>
 
 </html>
+
 
 
 
