--- a/index og.html
+++ b/index og.html
@@ -4,7 +4,7 @@
 	</head>
 
 	<body>
-		<a href="index.html">naslovna :P</a><br>
+		<a href="index og.html">naslovna :P</a><br>
 		<a href="o emi.html">o emi :D</a><br>
 		<p>
 			<h6>ovo je moja tajna</h6>
@@ -45,6 +45,7 @@
 	</body>
 
 </html>
+
 
 
 
