--- a/index og.html
+++ b/index og.html
@@ -6,6 +6,7 @@
 	<body>
 		<a href="index og.html">naslovna :P</a><br>
 		<a href="o emi.html">o emi :D</a><br>
+		<a href="važne informacije.html">važne informacije :o</a><br>
 		<p>
 			<h6>ovo je moja tajna</h6>
 		</p>
@@ -45,6 +46,7 @@
 	</body>
 
 </html>
+
 
 
 
