--- a/o emi.html
+++ b/o emi.html
@@ -6,10 +6,10 @@
 	<body>
 		<a href="index.html">naslovna :P</a><br>
 		<a href="o emi.html">o emi :D</a><br>
+		<a href="važne informacije.html">važne informacije :o</a><br>
 		<p>
 			<h6>ovo je moja tajna</h6>
 		</p>
-		<img src="standardboard.jpg">
 		<p>
 			<h1><b>:D</b></h1>
 		</p>
@@ -45,6 +45,7 @@
 	</body>
 
 </html>
+
 
 
 
