--- a/važne informacije.html
+++ b/važne informacije.html
@@ -1,11 +1,12 @@
 <html>
 	<head>
-		<title>emina stranica</title>
+		<title>veri important info :o</title>
 	</head>
 
 	<body>
 		<a href="index.html">naslovna :P</a><br>
 		<a href="o emi.html">o emi :D</a><br>
+		<a href="važne informacije.html">važne informacije :o</a><br>
 		<p>
 			<h6>ovo je moja tajna</h6>
 		</p>
