--- a/važne informacije.html
+++ b/važne informacije.html
@@ -4,7 +4,7 @@
 	</head>
 
 	<body>
-		<a href="index.html">naslovna :P</a><br>
+		<a href="index og.html">naslovna :P</a><br>
 		<a href="o emi.html">o emi :D</a><br>
 		<a href="važne informacije.html">važne informacije :o</a><br>
 		<p>
