--- a/o emi.html
+++ b/o emi.html
@@ -16,9 +16,11 @@
 		<pre>
 			<b>ordom     ejdom     ensarjero!</b>
 		</pre>
+		<a href="https://www.youtube.com/watch?v=ef568d0CrRY&pp=ygUuMTAwMCBwbGF5ZXJzIHNpbXVsYXRlIGNpdmlsaXphdGlvbiByaWNoICYgcG9vcg%3D%3D"> najbolji video trust </a><br>
 	</body>
 
 </html>
+
 
 
 
