--- a/index og.html
+++ b/index og.html
@@ -4,6 +4,7 @@
 	</head>
 
 	<body>
+		<a name="vrh"></a>
 		<a href="index og.html"> naslovna :P </a><br>
 		<a href="o emi.html"> o emi :D </a><br>
 		<a href="važne informacije.html"> važne informacije :o </a><br>
@@ -43,9 +44,11 @@
 				<dd>dilerna</dd>
 		</dl>
 		<a href="https://gimnazija-cakovec.hr/">školica</a>
+		<a href="#vrh">vrati se gore :]</a>
 	</body>
 
 </html>
+
 
 
 
