--- a/index og.html
+++ b/index og.html
@@ -43,13 +43,12 @@
 				<dd>dkxre</dd>
 				<dd>dilerna</dd>
 		</dl>
-		<a href="https://gimnazija-cakovec.hr/">školica</a>
-		<p>
+		<a href="https://gimnazija-cakovec.hr/">školica</a><br>
 		<a href="#vrh">vrati se gore :]</a>
-		</p>
 	</body>
 
 </html>
+
 
 
 
