--- a/index og.html
+++ b/index og.html
@@ -44,10 +44,11 @@
 				<dd>dilerna</dd>
 		</dl>
 		<a href="https://gimnazija-cakovec.hr/">školica</a><br>
-		<a href="#vrh">vrati se gore :]</a>
+		<br><a href="#vrh">vrati se gore :]</a>
 	</body>
 
 </html>
+
 
 
 
