--- a/o emi.html
+++ b/o emi.html
@@ -8,6 +8,9 @@
 		<a href="o emi.html"> o emi :D </a><br>
 		<a href="važne informacije.html"> važne informacije :o </a><br>
 		<p>
+			ovdje me kontaktirajte: <br>
+			<a href="mailto:baldo.momce@gmail.com">baldo</a>
+		<p>
 			<h6>ovo je moja tajna</h6>
 		</p>
 		<p>
@@ -20,6 +23,7 @@
 	</body>
 
 </html>
+
 
 
 
