--- a/o emi.html
+++ b/o emi.html
@@ -10,6 +10,11 @@
 		<p>
 			ovdje me kontaktirajte: <br>
 			<a href="mailto:baldo.momce@gmail.com">baldo</a>
+		</p>
+		<p>
+			moja omiljena igra:<br>
+			<a href="https://www.minecraft.net/en-us"><img src="minecraft.png"></a>
+		</p>
 		<p>
 			<h6>ovo je moja tajna</h6>
 		</p>
@@ -23,6 +28,7 @@
 	</body>
 
 </html>
+
 
 
 
