--- a/važne informacije.html
+++ b/važne informacije.html
@@ -30,10 +30,18 @@
 				<dd>herald</dd>
 				<dd>gertrud</dd>
 				<dd>...</dd>
-			<dt>orejrasne</dt>
-				<dd>dkxre</dd>
-				<dd>dilerna</dd>
 		</dl>
+		<p>
+			<map name="mc">
+				<area shape="circle" coords="52,69,25" href="https://minecraft.wiki/w/Skeleton">
+				<area shape="circle" coords="90,66,25" href="https://minecraft.wiki/w/Zombie">
+				<area shape="circle" coords="138,85,25" href="https://minecraft.wiki/w/Creeper">
+				<area shape="circle" coords="183,72,25" href="https://minecraft.wiki/w/Spider">
+			</map>
+		</p>
+		<p>
+			<img src
+		</p>
 	</body>
 
 </html>
