--- a/o emi.html
+++ b/o emi.html
@@ -9,7 +9,7 @@
 		<a href="važne informacije.html"> važne informacije :o </a><br>
 		<p>
 			ovdje me kontaktirajte: <br>
-			<a href="mailto:baldo.momce@gmail.com">baldo</a>
+			<a href="mailto:baldomomce@gmail.com">baldo</a>
 		</p>
 		<p>
 			moja omiljena igra:<br>
@@ -28,6 +28,7 @@
 	</body>
 
 </html>
+
 
 
 
