--- a/o emi.html
+++ b/o emi.html
@@ -24,7 +24,7 @@
 		<pre>
 			<b>ordom     ejdom     ensarjero!</b>
 		</pre>
-		<table>
+		<table border = 1>
 			<tr>
 				<td>1</td>
 				<td>2</td>
@@ -40,6 +40,7 @@
 	</body>
 
 </html>
+
 
 
 
