--- a/o emi.html
+++ b/o emi.html
@@ -26,6 +26,7 @@
 		</pre>
 		<table>
 			<tr>
+				colspan="2"
 				<td>1</td>
 				<td>2</td>
 				<td>3</td>
@@ -40,6 +41,7 @@
 	</body>
 
 </html>
+
 
 
 
