--- a/o emi.html
+++ b/o emi.html
@@ -26,10 +26,8 @@
 		</pre>
 		<table>
 			<tr>
-				colspan="2"
-				<td>1</td>
+				<th colspan="2">1</th>
 				<td>2</td>
-				<td>3</td>
 			</tr>
 			<tr>
 				<td>4</td>
@@ -41,6 +39,7 @@
 	</body>
 
 </html>
+
 
 
 
