--- a/o emi.html
+++ b/o emi.html
@@ -26,7 +26,7 @@
 		</pre>
 		<table>
 			<tr>
-				<th colspan="2">1</th>
+				<td colspan="2">1</td>
 				<td>2</td>
 			</tr>
 			<tr>
@@ -39,6 +39,7 @@
 	</body>
 
 </html>
+
 
 
 
