--- a/o emi.html
+++ b/o emi.html
@@ -27,12 +27,11 @@
 		<table>
 			<tr>
 				<td colspan="2">1</td>
-				<td>2</td>
 			</tr>
 			<tr>
+				<td rowspan="2">2</td>
 				<td>3</td>
 				<td>4</td>
-				<td>5</td>
 			</tr>
 		</table>
 		<p>
@@ -41,6 +40,7 @@
 	</body>
 
 </html>
+
 
 
 
