--- a/važne informacije.html
+++ b/važne informacije.html
@@ -13,6 +13,26 @@
 		<pre>
 			<b>ordom     ejdom     ensarjero!</b>
 		</pre>
+		<table>
+			<tr>
+				<th colspan="2">ime i prezime</th>
+				<th>rođen</th>
+			</tr>
+			<tr>
+				<td>Dora</td>
+				<td>Tkalec</td>
+				<td>2008.</td>
+			</tr>
+			<tr>
+				<td rowspan="2">Lara</td>
+				<td>Grujić</td>
+				<td>2008.</td>
+			</tr>
+			<tr>
+				<td>Pergar</td>
+				<td>2008.</td>
+			</tr>
+		</table>
 		<ol>
 			<li>flovrida</li>
 			<li>escenarii</li>
