--- a/važne informacije.html
+++ b/važne informacije.html
@@ -14,9 +14,10 @@
 			<b>ordom     ejdom     ensarjero!</b>
 		</pre>
 		<table>
+			<table border="1">
 			<tr>
-				<th colspan="2">ime i prezime</th>
-				<th>rođen</th>
+				<th colspan="2">orejrasne</th>
+				<th>godište</th>
 			</tr>
 			<tr>
 				<td>Dora</td>
