--- a/važne informacije.html
+++ b/važne informacije.html
@@ -21,16 +21,14 @@
 			<tr>
 				<td>Dora</td>
 				<td>Tkalec</td>
-				<td>2008.</td>
+				<td rowspan="3">2008.</td>
 			</tr>
 			<tr>
 				<td rowspan="2">Lara</td>
 				<td>Grujić</td>
-				<td>2008.</td>
 			</tr>
 			<tr>
 				<td>Pergar</td>
-				<td>2008.</td>
 			</tr>
 		</table>
 		<ol>
