--- a/važne informacije.html
+++ b/važne informacije.html
@@ -13,7 +13,7 @@
 		<pre>
 			<b>ordom     ejdom     ensarjero!</b>
 		</pre>
-		<table border="1">
+		<table border="1" width="50%">
 			<tr>
 				<th colspan="2">orejrasne</th>
 				<th>godište</th>
