--- a/važne informacije.html
+++ b/važne informacije.html
@@ -19,16 +19,16 @@
 				<th>godište</th>
 			</tr>
 			<tr>
-				<td>Dora</td>
-				<td>Tkalec</td>
-				<td rowspan="3">2008.</td>
+				<td align="right">Dora</td>
+				<td align="left">Tkalec</td>
+				<td rowspan="3" align="center">2008.</td>
 			</tr>
 			<tr>
-				<td rowspan="2">Lara</td>
-				<td>Grujić</td>
+				<td rowspan="2" align="right">Lara</td>
+				<td align="left">Grujić</td>
 			</tr>
 			<tr>
-				<td>Pergar</td>
+				<td align="left">Pergar</td>
 			</tr>
 		</table>
 		<ol>
