--- a/obrasci.html
+++ b/obrasci.html
@@ -4,7 +4,10 @@
 	</head>
 
 	<body>
-
+		<a href="index og.html"> naslovna :P </a><br>
+		<a href="o emi.html"> o emi :D </a><br>
+		<a href="važne informacije.html"> važne informacije :o </a>
+		<a href="obrasci.html"> obrasci </a>
 	</body>
 
 </html>
