--- a/obrasci.html
+++ b/obrasci.html
@@ -8,6 +8,12 @@
 		<a href="o emi.html"> o emi :D </a><br>
 		<a href="važne informacije.html"> važne informacije :o </a>
 		<a href="obrasci.html"> obrasci </a>
+		<form>
+		<p> Ime:
+			<input type="text" name="ime" size="25" maxlength="30">
+			
+		</p>
+		</form>
 	</body>
 
 </html>
