--- a/obrasci.html
+++ b/obrasci.html
@@ -6,7 +6,7 @@
 	<body>
 		<a href="index og.html"> naslovna :P </a><br>
 		<a href="o emi.html"> o emi :D </a><br>
-		<a href="važne informacije.html"> važne informacije :o </a>
+		<a href="važne informacije.html"> važne informacije :o </a><br>
 		<a href="obrasci.html"> obrasci </a>
 		<form>
 		<p> Ime:
