--- a/obrasci.html
+++ b/obrasci.html
@@ -11,7 +11,9 @@
 		<form>
 		<p> Ime:
 			<input type="text" name="ime" size="25" maxlength="30">
-			
+		</p>
+		<p> Prezime:
+			<input type="text" name="prezime" size="25" maxlength="30">
 		</p>
 		</form>
 	</body>
