--- a/važne informacije.html
+++ b/važne informacije.html
@@ -7,6 +7,7 @@
 		<a href="index og.html"> naslovna :P </a><br>
 		<a href="o emi.html"> o emi :D </a><br>
 		<a href="važne informacije.html"> važne informacije :o </a><br>
+		<a href="obrasci.html"> obrasci </a>
 		<p>
 			<h1><b>:D</b></h1>
 		</p>
