--- a/obrasci.html
+++ b/obrasci.html
@@ -9,18 +9,17 @@
 		<a href="važne informacije.html"> važne informacije :o </a><br>
 		<a href="obrasci.html"> obrasci </a>
 		<form>
-		<p> Ime:
-			<input type="text" name="ime" size="25" maxlength="30">
-		</p>
-		<p> Prezime:
-			<input type="text" name="prezime" size="25" maxlength="30">
-		</p>
+			<p> Ime:
+				<input type="text" name="ime" size="25" maxlength="30">
+			</p>
+			<p> Prezime:
+				<input type="text" name="prezime" size="25" maxlength="30">
+			</p>
+			<p> Komentar:
+				<textarea name="komentar" rows="5" cols="55">
+				</textarea>
+			</p>
 		</form>
 	</body>
 
 </html>
-
-
-
-
-
