--- a/obrasci.html
+++ b/obrasci.html
@@ -13,14 +13,14 @@
 				<input type="text" name="ime" size="25" maxlength="30">
 			</p>
 			<p> Prezime:
-				<input type="text" name="ime" size="25" maxlength="30">
+				<input type="text" name="prezime" size="25" maxlength="30">
 			</p>
 			<p> Komentar:
 				<textarea name="komentar" rows="5" cols="55">
 				</textarea>
 			</p>
 			<p> Lozinka:
-				<input type="password" name="ime" size="25" maxlength="30">
+				<input type="password" name="lozinka" size="25" maxlength="30">
 			</p>
 		</form>
 	</body>
