--- a/obrasci.html
+++ b/obrasci.html
@@ -22,6 +22,9 @@
 			<p> Lozinka:
 				<input type="password" name="lozinka" size="25" maxlength="30">
 			</p>
+			<p> 
+				<input type="button" name="gumb" value="vrijednost">
+			</p>
 		</form>
 	</body>
 
