--- a/obrasci.html
+++ b/obrasci.html
@@ -23,7 +23,19 @@
 				<input type="password" name="lozinka" size="25" maxlength="30">
 			</p>
 			<p> 
-				<input type="button" name="gumb" value="vrijednost">
+				<input type="button" name="gumb" value="kaj ovo radi?">
+			</p>
+			<p> pristajem na:
+				<input type="checkbox" name="checkbox" checked>
+			</p>
+			<p> biram:
+				<input type="radio" name="radio" unchecked>
+			</p>
+			<p> 
+				<input type="reset" name="reset">
+			</p>
+			<p> 
+				<input type="submit" name="submit">
 			</p>
 		</form>
 	</body>
