--- a/obrasci.html
+++ b/obrasci.html
@@ -26,7 +26,8 @@
 				<input type="button" name="gumb" value="kaj ovo radi?">
 			</p>
 			<p> pristajem na:
-				<input type="checkbox" name="checkbox" checked> 
+				<input type="checkbox" name="checkbox" checked> terms & contitions
+				<input type="checkbox" name="checkbox" checked> cookies
 			</p>
 			<p> biram:
 				<input type="radio" name="radio" unchecked>
