--- a/obrasci.html
+++ b/obrasci.html
@@ -25,12 +25,14 @@
 			<p> 
 				<input type="button" name="gumb" value="kaj ovo radi?">
 			</p>
-			<p> pristajem na:
-				<input type="checkbox" name="checkbox" checked> terms & contitions
-				<input type="checkbox" name="checkbox" checked> cookies
+			<p> omiljeni predmet:
+				<input type="checkbox" name="checkbox" unchecked> likovni<br>
+				<input type="checkbox" name="checkbox" unchecked> matematika<br>
+				<input type="checkbox" name="checkbox" unchecked> slobodni sat :P
 			</p>
-			<p> biram:
-				<input type="radio" name="radio" unchecked>
+			<p> biram spol:
+				<input type="radio" name="radio" unchecked>its a girl<3<br>
+				<input type="radio" name="radio" unchecked>boiii
 			</p>
 			<p> 
 				<input type="reset" name="reset">
