--- a/obrasci.html
+++ b/obrasci.html
@@ -22,9 +22,7 @@
 			<p> Lozinka:
 				<input type="password" name="lozinka" size="25" maxlength="30">
 			</p>
-			<p> 
-				<input type="button" name="gumb" value="kaj ovo radi?">
-			</p>
+			
 			<p> omiljeni predmet:
 				<input type="checkbox" name="checkbox" unchecked> likovni<br>
 				<input type="checkbox" name="checkbox" unchecked> matematika<br>
@@ -33,6 +31,9 @@
 			<p> biram spol:
 				<input type="radio" name="radio" unchecked>its a girl<3<br>
 				<input type="radio" name="radio" unchecked>boiii
+			</p>
+			<p> 
+				<input type="button" name="gumb" value="pohrani podatke">
 			</p>
 			<p> 
 				<input type="reset" name="reset">
