--- a/obrasci.html
+++ b/obrasci.html
@@ -23,12 +23,12 @@
 				<input type="password" name="lozinka" size="25" maxlength="30">
 			</p>
 			
-			<p> omiljeni predmet:
+			<p> omiljeni predmet:<br>
 				<input type="checkbox" name="checkbox" unchecked> likovni<br>
 				<input type="checkbox" name="checkbox" unchecked> matematika<br>
 				<input type="checkbox" name="checkbox" unchecked> slobodni sat :P
 			</p>
-			<p> biram spol:
+			<p> biram spol:<br>
 				<input type="radio" name="radio" unchecked>its a girl<3<br>
 				<input type="radio" name="radio" unchecked>boiii
 			</p>
