--- a/obrasci.html
+++ b/obrasci.html
@@ -29,8 +29,8 @@
 				<input type="checkbox" name="checkbox" unchecked> slobodni sat :P
 			</p>
 			<p> biram spol:<br>
-				<input type="radio" name="radio" unchecked>its a girl<3<br>
-				<input type="radio" name="radio" unchecked>boiii
+				<input type="radio" name="radio" unchecked>creeper?<br>
+				<input type="radio" name="radio" unchecked>aw man!
 			</p>
 			<p> 
 				<input type="button" name="gumb" value="pohrani podatke">
