--- a/obrasci.html
+++ b/obrasci.html
@@ -28,8 +28,8 @@
 				<input type="checkbox" name="checkbox" unchecked> matematika<br>
 				<input type="checkbox" name="checkbox" unchecked> slobodni sat :P
 			</p>
-			<p> biram spol:<br>
-				<input type="radio" name="radio" unchecked>creeper?<br>
+			<p> biram spol:
+				<input type="radio" name="radio" unchecked>creeper?
 				<input type="radio" name="radio" unchecked>aw man!
 			</p>
 			<p> 
