--- a/obrasci.html
+++ b/obrasci.html
@@ -36,10 +36,8 @@
 				<input type="button" name="gumb" value="pohrani podatke">
 			</p>
 			<p> 
-				<input type="reset" name="reset">
-			</p>
-			<p> 
-				<input type="submit" name="submit">
+				<input type="reset" name="reset" value="obriši">
+				<input type="submit" name="submit" value="pošalji">			
 			</p>
 		</form>
 	</body>
