--- a/obrasci.html
+++ b/obrasci.html
@@ -32,6 +32,13 @@
 				<input type="radio" name="radio" unchecked>creeper?
 				<input type="radio" name="radio" unchecked>aw man!
 			</p>
+			<p> odaberi:
+				<select name="serija">
+					<option value="vrijednost1">blabla</option>
+					<option value="vrijednost2">youtube</option>
+					<option value="vrijednost3">baldo momče</option>
+					<option value="vrijednost4">ensarjero</option>
+				</select>
 			<p> 
 				<input type="button" name="gumb" value="pohrani podatke">
 			</p>
