--- a/STILOVI.html
+++ b/STILOVI.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>emina stranica</title>
+		<title>stilovi</title>
 	</head>
 
 	<body>
@@ -8,47 +8,15 @@
 		<a href="index og.html"> naslovna :P </a><br>
 		<a href="o emi.html"> o emi :D </a><br>
 		<a href="važne informacije.html"> važne informacije :o </a><br>
+		<a href="STILOVI.html"> stilovi </a><br>
 		<a href="obrasci.html"> obrasci </a>
 		<p>
-			<h6>ovo je moja tajna</h6>
-		</p>
-		<img src="standardboard.jpg">
-		<p>
-			<h1><b>:D</b></h1>
-		</p>
-		<p>
-			sada iznad glavnog poveznika stavimo zvijezdicu
-			<br>...to zapravo nije znak nego samo &nbsp; &nbsp moj  <h3><b><i>čmrka</i></b></h3>
-		</p>
-		<pre>
-			<b>ordom     ejdom     ensarjero!</b>
-		</pre>
-		<ol>
-			<li>flovrida</li>
-			<li>escenarii</li>
-			<li>globskver</li>
-			<li>čmrka/čmrlja</li>
-		</ol>
-		<ul style="list-style-type:square;">
-			<li>gertrud</li>
-			<li>terver</li>
-			<li>ocktavijan</li>
-			<li>moohamed</li>
-		</ul>
-		<dl>
-			<dt>građani ensarjera</dt>
-				<dd>herald</dd>
-				<dd>gertrud</dd>
-				<dd>...</dd>
-			<dt>orejrasne</dt>
-				<dd>dkxre</dd>
-				<dd>dilerna</dd>
-		</dl>
-		<a href="https://gimnazija-cakovec.hr/">školica</a><br>
+
 		<br><a href="#vrh">vrati se gore :]</a>
 	</body>
 
 </html>
+
 
 
 
