--- a/STILOVI.html
+++ b/STILOVI.html
@@ -1,7 +1,13 @@
 <html>
 	<head>
-		<title>stilovi</title>
-	</head>
+		<style type="text/css">
+			body {
+				font-family: Calibri;
+				font-size: 18px;
+				color: blue;
+			}
+		</style>
+	</head> 
 
 	<body>
 		<a name="vrh"></a>
@@ -10,12 +16,12 @@
 		<a href="važne informacije.html"> važne informacije :o </a><br>
 		<a href="STILOVI.html"> stilovi </a><br>
 		<a href="obrasci.html"> obrasci </a>
-		<p>
-
+		
 		<br><a href="#vrh">vrati se gore :]</a>
 	</body>
 
 </html>
+
 
 
 
