--- a/index og.html
+++ b/index og.html
@@ -8,6 +8,7 @@
 		<a href="index og.html"> naslovna :P </a><br>
 		<a href="o emi.html"> o emi :D </a><br>
 		<a href="važne informacije.html"> važne informacije :o </a><br>
+		<a href="STILOVI.html"> stilovi </a><br>
 		<a href="obrasci.html"> obrasci </a>
 		<p>
 			<h6>ovo je moja tajna</h6>
@@ -49,6 +50,7 @@
 	</body>
 
 </html>
+
 
 
 
