--- a/obrasci.html
+++ b/obrasci.html
@@ -4,9 +4,11 @@
 	</head>
 
 	<body>
+		<a name="vrh"></a>
 		<a href="index og.html"> naslovna :P </a><br>
 		<a href="o emi.html"> o emi :D </a><br>
 		<a href="važne informacije.html"> važne informacije :o </a><br>
+		<a href="STILOVI.html"> stilovi </a><br>
 		<a href="obrasci.html"> obrasci </a>
 		<form>
 			<p> Ime:
